Fixed timeline component displaying oddly on mobile.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,6 @@
     margin: 0;
     background: #fff;
   }
+.sticky-container {
+  overflow: hidden !important;
+}
