--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,18 @@
-.big-background-image {
-    background-image: url('../../assets/img/bab_nima.jpg');
+@media (min-width: 426px) {
+  .big-background-image {
+      background-image: url('../../assets/img/bab_nima.jpg');
+      width: 100%;
+      height: 100%;
+      background-position-x: 50%;
+      background-position-y: 50%;
+  }
+}
+@media (max-width: 426px) {
+  .big-background-image {
+    background-image: url('../../assets/img/bab_nima_xs.jpg');
     width: 100%;
     height: 100%;
     background-position-x: 50%;
     background-position-y: 50%;
+  }
 }
