--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -246,11 +246,11 @@ padding:0;
 }
 .timeline > li:nth-child(even) .timeline-panel {
   width: 100%;
-  padding: 0 0 20px 14px;
+  /* padding: 0 0 20px 14px; */
 }
 .timeline > li:nth-child(odd) .timeline-panel {
   width: 100%;
-  padding: 0 14px 20px 0px;
+  /* padding: 0 14px 20px 0px; */
 }
 .timeline > li .line {
   display: none;
